<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dzienna dawka informacji: "
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/dataJestTo"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:paddingTop="5dp"
        android:textSize="25dp"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/dziabuch"
        android:textSize="20dp"
        android:paddingTop="5dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infToday"
        />

    <TextView
        android:id="@+id/textView28"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/infGeneral" />

    <TextView
        android:id="@+id/textView30"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/deathsGeneral" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/deathsToday" />


</LinearLayout>